// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`returns all baseRoutes 1`] = `
Array [
  Object {
    "component": [Function],
    "icon": "list",
    "path": "/features",
    "title": "Feature Toggles",
  },
  Object {
    "component": [Function],
    "icon": "extension",
    "path": "/strategies",
    "title": "Strategies",
  },
  Object {
    "component": [Function],
    "icon": "history",
    "path": "/history",
    "title": "Event History",
  },
  Object {
    "component": [Function],
    "icon": "archive",
    "path": "/archive",
    "title": "Archived Toggles",
  },
  Object {
    "component": [Function],
    "icon": "apps",
    "path": "/applications",
    "title": "Applications",
  },
  Object {
    "component": [Function],
    "flag": "C",
    "icon": "album",
    "path": "/context",
    "title": "Context Fields",
  },
  Object {
    "component": [Function],
    "flag": "P",
    "icon": "folder_open",
    "path": "/projects",
    "title": "Projects",
  },
  Object {
    "component": [Function],
    "icon": "label",
    "path": "/tag-types",
    "title": "Tag types",
  },
  Object {
    "component": [Function],
    "hidden": false,
    "icon": "device_hub",
    "path": "/addons",
    "title": "Addons",
  },
  Object {
    "component": [Function],
    "icon": "report",
    "path": "/reporting",
    "title": "Reporting",
  },
  Object {
    "component": [Function],
    "icon": "exit_to_app",
    "path": "/logout",
    "title": "Sign out",
  },
]
`;

exports[`returns all defined routes 1`] = `
Array [
  Object {
    "component": [Function],
    "parent": "/features",
    "path": "/features/create",
    "title": "Create",
  },
  Object {
    "component": [Function],
    "parent": "/features",
    "path": "/features/copy/:copyToggle",
    "title": "Copy",
  },
  Object {
    "component": [Function],
    "parent": "/features",
    "path": "/features/:activeTab/:name",
    "title": ":name",
  },
  Object {
    "component": [Function],
    "icon": "list",
    "path": "/features",
    "title": "Feature Toggles",
  },
  Object {
    "component": [Function],
    "parent": "/strategies",
    "path": "/strategies/create",
    "title": "Create",
  },
  Object {
    "component": [Function],
    "parent": "/strategies",
    "path": "/strategies/:activeTab/:strategyName",
    "title": ":strategyName",
  },
  Object {
    "component": [Function],
    "icon": "extension",
    "path": "/strategies",
    "title": "Strategies",
  },
  Object {
    "component": [Function],
    "parent": "/history",
    "path": "/history/:toggleName",
    "title": ":toggleName",
  },
  Object {
    "component": [Function],
    "icon": "history",
    "path": "/history",
    "title": "Event History",
  },
  Object {
    "component": [Function],
    "parent": "/archive",
    "path": "/archive/:activeTab/:name",
    "title": ":name",
  },
  Object {
    "component": [Function],
    "icon": "archive",
    "path": "/archive",
    "title": "Archived Toggles",
  },
  Object {
    "component": [Function],
    "parent": "/applications",
    "path": "/applications/:name",
    "title": ":name",
  },
  Object {
    "component": [Function],
    "icon": "apps",
    "path": "/applications",
    "title": "Applications",
  },
  Object {
    "component": [Function],
    "parent": "/context",
    "path": "/context/create",
    "title": "Create",
  },
  Object {
    "component": [Function],
    "parent": "/context",
    "path": "/context/edit/:name",
    "title": ":name",
  },
  Object {
    "component": [Function],
    "flag": "C",
    "icon": "album",
    "path": "/context",
    "title": "Context Fields",
  },
  Object {
    "component": [Function],
    "parent": "/projects",
    "path": "/projects/create",
    "title": "Create",
  },
  Object {
    "component": [Function],
    "parent": "/projects",
    "path": "/projects/edit/:id",
    "title": ":id",
  },
  Object {
    "component": [Function],
    "flag": "P",
    "icon": "folder_open",
    "path": "/projects",
    "title": "Projects",
  },
  Object {
    "component": [Function],
    "parent": "/admin",
    "path": "/admin/api",
    "title": "API access",
  },
  Object {
    "component": [Function],
    "parent": "/admin",
    "path": "/admin/users",
    "title": "Users",
  },
  Object {
    "component": [Function],
    "parent": "/admin",
    "path": "/admin/auth",
    "title": "Authentication",
  },
  Object {
    "component": [Function],
    "hidden": true,
    "icon": "album",
    "path": "/admin",
    "title": "Admin",
  },
  Object {
    "component": [Function],
    "parent": "/tag-types",
    "path": "/tag-types/create",
    "title": "Create",
  },
  Object {
    "component": [Function],
    "parent": "/tag-types",
    "path": "/tag-types/edit/:name",
    "title": ":name",
  },
  Object {
    "component": [Function],
    "icon": "label",
    "path": "/tag-types",
    "title": "Tag types",
  },
  Object {
    "component": [Function],
    "parent": "/tags",
    "path": "/tags/create",
    "title": "Create",
  },
  Object {
    "component": [Function],
    "hidden": true,
    "icon": "label",
    "path": "/tags",
    "title": "Tags",
  },
  Object {
    "component": [Function],
    "parent": "/addons",
    "path": "/addons/create/:provider",
    "title": "Create",
  },
  Object {
    "component": [Function],
    "parent": "/addons",
    "path": "/addons/edit/:id",
    "title": "Edit",
  },
  Object {
    "component": [Function],
    "hidden": false,
    "icon": "device_hub",
    "path": "/addons",
    "title": "Addons",
  },
  Object {
    "component": [Function],
    "icon": "report",
    "path": "/reporting",
    "title": "Reporting",
  },
  Object {
    "component": [Function],
    "icon": "exit_to_app",
    "path": "/logout",
    "title": "Sign out",
  },
]
`;
